fix: replaced '查询常识' with '查询事实'

--- a/dialogs/dialog-2026-01-18--14-31.md
+++ b/dialogs/dialog-2026-01-18--14-31.md
@@ -270,7 +270,7 @@ n. [最终操作]
               >
                 <span className="flex items-center">
                   <span className="mr-2">⚡</span>
-                  查询常识
+                  查询事实
                 </span>
               </button>
               <button
